Fix alignment of custom track header

--- a/packages/cbioportal-clinical-timeline/src/timeline.scss
+++ b/packages/cbioportal-clinical-timeline/src/timeline.scss
@@ -164,3 +164,7 @@ $borderColor: #ccc;
         display: none;
     }
 }
+
+.tl-custom-track-header {
+    position: relative;
+}
