--- a/src/globalStyles/global.scss
+++ b/src/globalStyles/global.scss
@@ -558,6 +558,10 @@ h3.hr {
     display: block;
 }
 
+.positionAbsolute {
+    position: absolute;
+}
+
 .noOqlWarning {
     color: #74bedb;
 }
